parte do css responsivo pronto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="cartao-atras">
       <p class="cvc-cartao">000</p>
-      <img src="/images/bg-card-back.png" class="frente" />
+      <img src="/images/bg-card-back.png" class="atras" />
     </div>
     <form class="info-cartao">
       <label>Cardholder name</label>
