--- a/index.html
+++ b/index.html
@@ -18,34 +18,35 @@
   <div class="conteudo">
     <div class="parte1"></div>
     <div class="cartao-frente">
-      <p class="numero-cartao">0000 0000 0000 0000</p>
-      <p class="nome-cartao">Jane Appleseed</p>
-      <p class="data-cartao">00/00</p>
+      <p class="numero-cartao" data-cartao="numero">0000 0000 0000 0000</p>
+      <p class="nome-cartao" data-cartao="name">Jane Appleseed</p>
+      <p class="data-cartao" data-cartao="vencimento"><span class='mes'>00</span>/<span class='ano'></span>00</span></p>
       <img src="/images/bg-card-front.png" class="frente" />
     </div>
     <div class="cartao-atras">
-      <p class="cvc-cartao">000</p>
+      <p class="cvc-cartao" data-cartao="cvc">000</p>
       <img src="/images/bg-card-back.png" class="atras" />
     </div>
     <form class="info-cartao">
       <label>Cardholder name</label>
-      <input type="text" placeholder="e.g Jane Appleseed" />
+      <input type="text" placeholder="e.g Jane Appleseed" data-input="name" />
       <label>Card Number</label>
-      <input type="number" placeholder="e.g 1234 5674 9123 0000" />
+      <input type="number" placeholder="e.g 1234 5674 9123 0000" data-input="numero" />
       <div class="info-data-cvc">
-        <div class="info-data">
+        <div class="info-data" data-input="vencimento">
           <label>Exp. Date</label>
-          <input type="number" placeholder="MM" />
-          <input type="number" placeholder="YY" />
+          <input type="number" placeholder="MM" data-input="mes" />
+          <input type="number" placeholder="YY" data-input="ano" />
         </div>
         <div class="info-cvc">
           <label>CVC</label>
-          <input type="number" placeholder="e.g 123" />
+          <input type="number" placeholder="e.g 123" data-input="cvc" />
         </div>
       </div>
       <button class="enviar">Confirm</button>
     </form>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
