--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div class="cartao-frente">
       <p class="numero-cartao" data-cartao="numero">0000 0000 0000 0000</p>
       <p class="nome-cartao" data-cartao="name">Jane Appleseed</p>
-      <p class="data-cartao" data-cartao="vencimento"><span class='mes'>00</span>/<span class='ano'></span>00</span></p>
+      <p class="data-cartao" data-cartao="vencimento">
+        <span class='mes'>00</span>/<span class='ano'>00</span>
+      </p>
       <img src="/images/bg-card-front.png" class="frente" />
     </div>
     <div class="cartao-atras">
