nome com espaçamento

--- a/enviado.html
+++ b/enviado.html
@@ -30,24 +30,10 @@
       <p class="cvc-cartao" data-cartao="cvc">000</p>
       <img src="/images/bg-card-back.png" class="atras" />
     </div>
-    <form class="info-cartao">
-      <label>Cardholder name</label>
-      <input type="text" placeholder="e.g Jane Appleseed" data-input="name" />
-      <label>Card Number</label>
-      <input type="number" placeholder="e.g 1234 5674 9123 0000" data-input="numero" />
-      <div class="info-data-cvc">
-        <div class="info-data" data-input="vencimento">
-          <label>Exp. Date</label>
-          <input type="number" placeholder="MM" data-input="mes" />
-          <input type="number" placeholder="YY" data-input="ano" />
-        </div>
-        <div class="info-cvc">
-          <label>CVC</label>
-          <input type="number" placeholder="e.g 123" data-input="cvc" />
-        </div>
-      </div>
-      <button class="enviar" data-enviar>Confirm</button>
-    </form>
+    <section class="enviado">
+      <h2>Thank You!</h2>
+      <p>We've added your card details</p>
+    </section>
   </div>
   <script src="js/script.js"></script>
 </body>
