--- a/enviado.html
+++ b/enviado.html
@@ -35,7 +35,7 @@
       <p>We've added your card details</p>
     </section>
   </div>
-  <script src="js/script.js"></script>
+  <script src=""></script>
 </body>
 
 </html>
